components/Header.module.css
.header {
    background: var(--color-muted);
    padding: 1rem 2rem;
    box-shadow: var(--shadow);
    display: flex;
    align-items: center;
    -webkit-user-select: none;
    user-select: none;
    width: 100vw;
    justify-content: space-between;
    height: 72px;
    border-bottom: var(--outline);
}

.left {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 30px;
}

.left span {
    color: white;
}

.left span:hover {
    text-decoration: underline;
}

.left #premium {
    background: linear-gradient(90deg, rgba(0, 255, 225, 1) 18%, rgba(72, 232, 72, 1) 84%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    position: relative;
    display: inline-block;
}

.left #premium::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    height: 2px;
    width: 0%;
    background: rgba(0, 255, 225, 0.8);
    /* ou um gradiente se quiser */
    transition: width 0.3s ease;
}

.left #premium:hover::after {
    width: 100%;
}

.left #pixelPlace {
    text-decoration: none;
    position: relative;
    display: inline-block;
}

.left #pixelPlace::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    height: 2px;
    width: 0%;
    background: white;
    /* ou um gradiente se quiser */
    transition: width 0.3s ease;
}

.left #pixelPlace:hover::after {
    width: 100%;
}

.left .item {
    display: flex;
    align-items: center;
    gap: 7px;
}

.right {
    margin-left: auto;
    gap: 7px;
    width: min-content;
    margin: 0px;
    overflow: hidden;

}

.right .loggedUser {
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
}

.right .loggedUser span {
    font-weight: 500;
    color: #ffffff;
    padding-right: 10px;
    /* width: 0px; */
            max-width: min-content;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.right .loggedUser img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    object-fit: cover;
    border: var(--outline);
}


.right .loggedUser {
    display: flex;
    align-items: center;
}

.right .loggedUser a {
    display: flex;
    align-items: center;
}

.tippy_menu {
    background-color: hsla(0deg, 0%, 100%, 75%);
    backdrop-filter: var(--frosted-glass-blur);
    border: var(--outline);
    padding: 10px;
    border-radius: 10px;
    -webkit-user-select: none;
    user-select: none;
    cursor: pointer;
    transition: var(--smooth-transition);
}

.tippy_menu span {
    color: hsla(0deg, 0%, 25%, 75%) !important;
    padding: 0 !important;
}

.tippy_menu:hover {
    background-color: red !important;
    scale: var(--hover-scale);
}

.tippy_menu:hover span {
    color: white !important;
}

@media (max-width: 500px) {
    .header{
        padding: 1rem .5rem;
    }
}

@media (max-width: 350px) {
    .left{
        gap: 12px;
    }
}

